set overflow on rotating home logos to avoid scrollbar flickering

--- a/src/assets/style/home.scss
+++ b/src/assets/style/home.scss
@@ -57,6 +57,7 @@
 
     position: relative;
     height: 30vh;
+    overflow: hidden;
 
     @media #{$breakpoint-mobile} {
       height: 20vh;
